# DB_HomeWork

HW_ver2/: CMakeLists.txt  main.cpp
HW_ver2/include/: BasicStorage.hpp  ClothesStorage.hpp  DB.hpp  ShoesStorage.hpp
HW_ver2/sources/: BasicStorage.cpp  ClothesStorage.cpp  DB.cpp  ShoesStorage.cpp
Homework1_DB/: CMakeLists.txt  main.cpp
Homework1_DB/include/: BasicStorage.hpp  ClothesStorage.hpp  DB.hpp  ShoesStorage.hpp
Homework1_DB/sources/: BasicStorage.cpp  ClothesStorage.cpp  DB.cpp  ShoesStorage.cpp
